# tukaan

./: .editorconfig  .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: check.yml  pypi.yml
tests/: base.py  conftest.py  foo.cur  sources.txt  test_button.py  test_buttons.py  test_checkbox.py  test_collector.py  test_containers.py  test_cursors.py  test_divider.py  test_events.py  test_grid.py  test_images.py  test_label.py  test_multiple_main_windows.py  test_radiobutton.py  test_status_widgets.py  test_tcl_interface.py  test_variables.py  test_window.py  test_window_manager.py
tukaan/: __init__.py  __version__.py  _base.py  _behaviour.py  _collect.py  _constants.py  _cursors.py  _data.py  _dnd.py  _enums.py  _event.py  _events.py  _events_n_bindings.py  _font.py  _helpers.py  _images.py  _info.py  _keysyms.py  _layout.py  _layouts.py  _misc.py  _mixins.py  _nogc.py  _platform.py  _properties.py  _props.py  _returntype.py  _structures.py  _system.py  _tcl.py  _tcltk.py  _theme_base.py  _themes.py  _timeouts.py  _typing.py  _units.py  _utils.py  _variables.py  _window_mixin.py  _wm.py  (+33 more)
tukaan/a11y/: a11y.py
tukaan/audio/: __init__.py  audio.py
tukaan/dialogs/: __init__.py  about.py  calendar.py  colorchooser.py  colorpicker.py  datetimedialogs.py  dialog.py  filedialog.py  fontpicker.py  input.py  messagebox.py  notification.py
tukaan/events/: _events.py  _keysyms.py  constants.py  event_manager.py  events.py  keysyms.py
tukaan/fonts/: font.py  fontfile.py
tukaan/graphics/: __init__.py  canvas.py  enums.py  equipment.py  gradient.py  items.py  utils.py
tukaan/layouts/: __init__.py  base.py  grid.py
tukaan/media/: __init__.py  audio.py
tukaan/themes/: __init__.py  css_theme.py  theme.py  themes.py
tukaan/theming/: __init__.py  aqua.tcl  clam.tcl  kolorscheme.py  kolorscheme.tcl  lookandfeel.py  themes.py  win32.tcl
tukaan/tkdnd/: LICENSE
tukaan/tkdnd/linux/: tkdnd_unix.tcl
tukaan/tkdnd/mac/: tkdnd_macosx.tcl
tukaan/tkdnd/win-x32/: tkdnd2.9.2.lib
tukaan/tkdnd/win-x64/: tkdnd_windows.tcl
tukaan/tkdnd/windows-x64/: pkgIndex.tcl
tukaan/tkextrafont/: extrafont.tcl  fontnameinfo.tcl  futmp.tcl  pkgIndex.tcl
tukaan/tkextrafont/mac/: extrafont.dylib
tukaan/tksnack/: LICENSE  pkgIndex.tcl  snack.tcl
tukaan/toplevels/: main_window.py  window.py  wm.py
tukaan/widgets/: _base.py  button.py  buttons.py  checkbox.py  combobox.py  containers.py  entry.py  frame.py  label.py  misc.py  progressbar.py  radiobutton.py  scrollbar.py  separator.py  slider.py  spinbox.py  splitview.py  static.py  status.py  tabview.py  textbox.py  textboxes.py  textview.py  tooltip.py  window.py
tukaan/windows/: main_window.py  window.py  wm.py
