[metadata]
name = tukaan
version = attr: tukaan.__version__.__version__
author = rdbende
author_email = rdbende@gmail.com
license = MIT
description = A modern, cross platform Python toolkit for creating desktop GUI applications.
keywords = gui, tcl, tcl/tk, tk, tkinter, ttk, tukaan, ui
url = https://tukaan.github.io
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Tcl
    Programming Language :: C
    Programming Language :: C++
    Typing :: Typed
project_urls =
    Documentation = https://tukaan.github.io/docs
    Source = https://github.com/tukaan/tukaan
    Tracker = https://github.com/tukaan/tukaan/issues

[options]
packages =
    tukaan
    tukaan/fonts
    tukaan/themes
    tukaan/widgets
include_package_data = True
install_requires =
    pillow>=8.0.0
    screeninfo>=0.8
    libtukaan-win==0.1.2; sys_platform == "win32"
    libtukaan-mac==0.1.2; sys_platform == "darwin"
    libtukaan-unix==0.1.2; sys_platform == "linux"
python_requires = >=3.7

[options.package_data]
tukaan = tkdnd/**
